--- a/package.json
+++ b/package.json
@@ -136,7 +136,7 @@
         "ANDROID_SHORTCUTBADGER_VERSION": "1.1.22"
       },
       "cordova-plugin-firebase-dynamiclinks": {
-        "APP_DOMAIN": "myanmartools.org",
+        "APP_DOMAIN": "zawgyi-unicode-converter.myanmartools.org",
         "PAGE_LINK_DOMAIN": "myanmartools.org/apps",
         "FIREBASE_CORE_VERSION": "17.0.+",
         "FIREBASE_DYNAMIC_LINKS_VERSION": "18.0.+"
