--- a/package.json
+++ b/package.json
@@ -126,20 +126,20 @@
         "FIREBASE_CRASHLYTICS_COLLECTION_ENABLED": "true",
         "ANDROID_ICON_ACCENT": "#FF00FFFF",
         "ANDROID_PLAY_SERVICES_TAGMANAGER_VERSION": "17.0.0",
-        "ANDROID_FIREBASE_CORE_VERSION": "17.0.0",
-        "ANDROID_FIREBASE_MESSAGING_VERSION": "19.0.0",
-        "ANDROID_FIREBASE_CONFIG_VERSION": "18.0.0",
-        "ANDROID_FIREBASE_PERF_VERSION": "18.0.0",
-        "ANDROID_FIREBASE_AUTH_VERSION": "18.0.0",
+        "ANDROID_FIREBASE_CORE_VERSION": "17.2.1",
+        "ANDROID_FIREBASE_MESSAGING_VERSION": "20.0.0",
+        "ANDROID_FIREBASE_CONFIG_VERSION": "19.0.3",
+        "ANDROID_FIREBASE_PERF_VERSION": "19.0.1",
+        "ANDROID_FIREBASE_AUTH_VERSION": "19.1.0",
         "ANDROID_CRASHLYTICS_VERSION": "2.10.1",
-        "ANDROID_CRASHLYTICS_NDK_VERSION": "2.1.0",
+        "ANDROID_CRASHLYTICS_NDK_VERSION": "2.1.1",
         "ANDROID_SHORTCUTBADGER_VERSION": "1.1.22"
       },
       "cordova-plugin-firebase-dynamiclinks": {
         "APP_DOMAIN": "zawgyi-unicode-converter.myanmartools.org",
         "PAGE_LINK_DOMAIN": "myanmartools.org/apps",
-        "FIREBASE_CORE_VERSION": "17.0.+",
-        "FIREBASE_DYNAMIC_LINKS_VERSION": "18.0.+"
+        "FIREBASE_CORE_VERSION": "17.2.1",
+        "FIREBASE_DYNAMIC_LINKS_VERSION": "19.0.+"
       }
     },
     "platforms": [
