--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zawgyi-unicode-converter-native",
-  "version": "3.0.0",
+  "version": "3.2.0",
   "private": true,
   "author": "DagonMetric",
   "license": "MIT",
@@ -52,6 +52,7 @@
     "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-firebase-dynamiclinks": "^4.0.1",
     "cordova-plugin-firebasex": "^6.1.0",
+    "cordova-plugin-globalization": "^1.11.0",
     "cordova-plugin-headercolor": "^1.0.0",
     "cordova-plugin-inappbrowser": "^3.1.0",
     "cordova-plugin-nativestorage": "^2.3.2",
@@ -59,6 +60,7 @@
     "cordova-support-android-plugin": "^1.0.1",
     "cordova-support-google-services": "^1.3.2",
     "core-js": "^3.3.6",
+    "es6-promise-plugin": "^4.2.2",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "^0.10.2"
