--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "cordova-android": "^8.1.0",
     "cordova-plugin-androidx": "^1.0.2",
     "cordova-plugin-androidx-adapter": "^1.1.0",
-    "cordova-plugin-apprate": "^1.5.0",
+    "cordova-plugin-apprate": "1.4.0",
     "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-firebase-dynamiclinks": "^4.0.2",
     "cordova-plugin-firebasex": "^7.0.1",
@@ -59,7 +59,7 @@
     "cordova-plugin-x-socialsharing": "^5.6.2",
     "cordova-support-android-plugin": "^1.0.1",
     "cordova-support-google-services": "^1.3.2",
-    "core-js": "^3.4.3",
+    "core-js": "^3.4.4",
     "es6-promise-plugin": "^4.2.2",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
