--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,7 +16,7 @@ jobs:
     - name: npm install, build and lint
       run: |
         npm ci
-        npm run build
-        npm run lint
+        npm run build --if-present
+        npm run lint --if-present
       env:
         CI: true
