--- a/package.json
+++ b/package.json
@@ -66,8 +66,8 @@
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.803.21",
-    "@angular-devkit/build-angular": "^0.803.21",
+    "@angular-devkit/architect": "0.803.19",
+    "@angular-devkit/build-angular": "0.803.19",
     "@angular-devkit/core": "^8.3.21",
     "@angular-devkit/schematics": "^8.3.21",
     "@angular/cli": "^8.3.21",
