--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zawgyi-unicode-converter-native",
-  "version": "3.6.0",
+  "version": "3.7.0",
   "private": true,
   "author": "DagonMetric",
   "license": "MIT",
@@ -17,31 +17,30 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
-    "@dagonmetric/ng-config": "^2.2.1",
-    "@dagonmetric/ng-log": "^2.2.1",
+    "@angular/common": "^9.1.0",
+    "@angular/compiler": "^9.1.0",
+    "@angular/core": "^9.1.0",
+    "@angular/forms": "^9.1.0",
+    "@angular/platform-browser": "^9.1.0",
+    "@angular/platform-browser-dynamic": "^9.1.0",
+    "@angular/router": "^9.1.0",
+    "@dagonmetric/ng-config": "^2.2.2",
+    "@dagonmetric/ng-log": "^2.2.2",
     "@dagonmetric/ng-translit": "^14.2.2",
-    "@ionic-native/app-rate": "^5.19.0",
-    "@ionic-native/core": "^5.19.0",
-    "@ionic-native/firebase-dynamic-links": "^5.19.0",
-    "@ionic-native/firebase-x": "^5.19.0",
-    "@ionic-native/header-color": "^5.19.0",
-    "@ionic-native/native-storage": "^5.19.0",
-    "@ionic-native/social-sharing": "^5.19.0",
-    "@ionic-native/splash-screen": "^5.19.0",
-    "@ionic-native/status-bar": "^5.19.0",
-    "@ionic-native/web-intent": "^5.19.0",
-    "@ionic/angular": "^4.11.7",
+    "@ionic-native/app-rate": "^5.23.0",
+    "@ionic-native/core": "^5.23.0",
+    "@ionic-native/firebase-dynamic-links": "^5.23.0",
+    "@ionic-native/firebase-x": "^5.23.0",
+    "@ionic-native/header-color": "^5.23.0",
+    "@ionic-native/native-storage": "^5.23.0",
+    "@ionic-native/social-sharing": "^5.23.0",
+    "@ionic-native/splash-screen": "^5.23.0",
+    "@ionic-native/status-bar": "^5.23.0",
+    "@ionic-native/web-intent": "^5.23.0",
+    "@ionic/angular": "^5.0.7",
     "@myanmartools/ng-zawgyi-detector": "^1.2.1",
     "@myanmartools/zawgyi-unicode-translit-rules": "^1.1.3",
     "com-darryncampbell-cordova-plugin-intent": "^2.0.0",
@@ -50,34 +49,34 @@
     "cordova-plugin-androidx-adapter": "^1.1.0",
     "cordova-plugin-apprate": "1.4.0",
     "cordova-plugin-dialogs": "^2.0.2",
-    "cordova-plugin-firebase-dynamiclinks": "^4.0.3",
-    "cordova-plugin-firebasex": "^7.0.1",
+    "cordova-plugin-firebase-analytics": "^4.2.0",
+    "cordova-plugin-firebase-dynamiclinks": "^4.3.0",
+    "cordova-plugin-firebasex": "^9.0.1",
     "cordova-plugin-globalization": "^1.11.0",
     "cordova-plugin-headercolor": "^1.0.0",
-    "cordova-plugin-inappbrowser": "^3.1.0",
+    "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-nativestorage": "^2.3.2",
-    "cordova-plugin-x-socialsharing": "^5.6.3",
-    "cordova-support-android-plugin": "^1.0.1",
-    "cordova-support-google-services": "^1.3.2",
-    "core-js": "^3.6.1",
+    "cordova-plugin-x-socialsharing": "^5.6.4",
+    "cordova-support-android-plugin": "^1.0.2",
+    "cordova-support-google-services": "^1.4.0",
+    "core-js": "^3.6.4",
     "es6-promise-plugin": "^4.2.2",
-    "rxjs": "^6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "^0.10.2"
+    "rxjs": "^6.5.5",
+    "tslib": "^1.11.1",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.803.21",
-    "@angular-devkit/build-angular": "0.803.20",
-    "@angular-devkit/core": "^8.3.21",
-    "@angular-devkit/schematics": "^8.3.21",
-    "@angular/cli": "^8.3.21",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
-    "@ionic/angular-toolkit": "^2.1.1",
-    "@types/jasmine": "^3.5.0",
+    "@angular-devkit/architect": "^0.901.0",
+    "@angular-devkit/build-angular": "0.901.0",
+    "@angular-devkit/core": "^9.1.0",
+    "@angular-devkit/schematics": "^9.1.0",
+    "@angular/cli": "^9.1.0",
+    "@angular/compiler-cli": "^9.1.0",
+    "@angular/language-service": "^9.1.0",
+    "@ionic/angular-toolkit": "^2.2.0",
+    "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^13.1.2",
-    "codelyzer": "^5.2.1",
+    "@types/node": "^13.11.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
@@ -85,18 +84,16 @@
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
     "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "^4.2.1",
+    "jasmine-spec-reporter": "^5.0.1",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.1",
+    "karma-jasmine": "^3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.3",
     "karma-junit-reporter": "^2.0.1",
-    "protractor": "^5.4.2",
-    "ts-node": "^8.5.4",
-    "tslint": "^5.20.1",
-    "tslint-microsoft-contrib": "^6.2.0",
-    "typescript": "~3.5.3"
+    "protractor": "^5.4.3",
+    "ts-node": "^8.8.2",
+    "typescript": "~3.8.3"
   },
   "cordova": {
     "plugins": {
@@ -120,19 +117,23 @@
         "FIREBASE_CRASHLYTICS_COLLECTION_ENABLED": "true",
         "ANDROID_ICON_ACCENT": "#FF00FFFF",
         "ANDROID_PLAY_SERVICES_TAGMANAGER_VERSION": "17.0.0",
-        "ANDROID_FIREBASE_MESSAGING_VERSION": "20.0.0",
-        "ANDROID_FIREBASE_CONFIG_VERSION": "19.0.3",
-        "ANDROID_FIREBASE_PERF_VERSION": "19.0.1",
-        "ANDROID_FIREBASE_AUTH_VERSION": "19.1.0",
+        "ANDROID_FIREBASE_MESSAGING_VERSION": "20.1.4",
+        "ANDROID_FIREBASE_CONFIG_VERSION": "19.1.3",
+        "ANDROID_FIREBASE_PERF_VERSION": "19.0.5",
+        "ANDROID_FIREBASE_AUTH_VERSION": "19.2.0",
         "ANDROID_CRASHLYTICS_VERSION": "2.10.1",
         "ANDROID_CRASHLYTICS_NDK_VERSION": "2.1.1",
-        "ANDROID_FIREBASE_ANALYTICS_VERSION": "17.2.1"
+        "ANDROID_FIREBASE_ANALYTICS_VERSION": "17.3.0",
+        "ANDROID_PLAY_SERVICES_AUTH_VERSION": "17.0.0",
+        "ANDROID_FIREBASE_INAPPMESSAGING_VERSION": "19.0.3",
+        "ANDROID_FIREBASE_FIRESTORE_VERSION": "21.4.0",
+        "ANDROID_GSON_VERSION": "2.8.6"
       },
       "cordova-plugin-firebase-dynamiclinks": {
         "APP_DOMAIN": "zawgyi-unicode-converter.myanmartools.org",
         "PAGE_LINK_DOMAIN": "myanmartools.org/apps",
-        "FIREBASE_ANALYTICS_VERSION": "17.2.+",
-        "FIREBASE_DYNAMIC_LINKS_VERSION": "19.0.+"
+        "FIREBASE_ANALYTICS_VERSION": "17.3.+",
+        "FIREBASE_DYNAMIC_LINKS_VERSION": "19.1.+"
       }
     },
     "platforms": [
