--- a/package.json
+++ b/package.json
@@ -20,80 +20,72 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/common": "^9.1.0",
-    "@angular/compiler": "^9.1.0",
-    "@angular/core": "^9.1.0",
-    "@angular/forms": "^9.1.0",
-    "@angular/platform-browser": "^9.1.0",
-    "@angular/platform-browser-dynamic": "^9.1.0",
-    "@angular/router": "^9.1.0",
-    "@dagonmetric/ng-config": "^2.2.2",
-    "@dagonmetric/ng-log": "^2.2.2",
-    "@dagonmetric/ng-translit": "^14.2.2",
-    "@ionic-native/app-rate": "^5.23.0",
-    "@ionic-native/core": "^5.23.0",
-    "@ionic-native/firebase-dynamic-links": "^5.23.0",
-    "@ionic-native/firebase-x": "^5.23.0",
-    "@ionic-native/header-color": "^5.23.0",
-    "@ionic-native/native-storage": "^5.23.0",
-    "@ionic-native/social-sharing": "^5.23.0",
-    "@ionic-native/splash-screen": "^5.23.0",
-    "@ionic-native/status-bar": "^5.23.0",
-    "@ionic-native/web-intent": "^5.23.0",
-    "@ionic/angular": "^5.0.7",
-    "@myanmartools/ng-zawgyi-detector": "^1.2.1",
-    "@myanmartools/zawgyi-unicode-translit-rules": "^1.1.3",
-    "com-darryncampbell-cordova-plugin-intent": "^2.0.0",
-    "cordova-android": "^8.1.0",
-    "cordova-plugin-androidx": "^1.0.2",
-    "cordova-plugin-androidx-adapter": "^1.1.0",
-    "cordova-plugin-apprate": "1.4.0",
-    "cordova-plugin-dialogs": "^2.0.2",
-    "cordova-plugin-firebase-analytics": "^4.2.0",
-    "cordova-plugin-firebase-dynamiclinks": "^4.3.0",
-    "cordova-plugin-firebasex": "^9.0.1",
-    "cordova-plugin-globalization": "^1.11.0",
-    "cordova-plugin-headercolor": "^1.0.0",
-    "cordova-plugin-inappbrowser": "^3.2.0",
-    "cordova-plugin-nativestorage": "^2.3.2",
-    "cordova-plugin-x-socialsharing": "^5.6.4",
-    "cordova-support-android-plugin": "^1.0.2",
-    "cordova-support-google-services": "^1.4.0",
-    "core-js": "^3.6.4",
-    "es6-promise-plugin": "^4.2.2",
-    "rxjs": "^6.5.5",
-    "tslib": "^1.11.1",
-    "zone.js": "^0.10.3"
+    "@angular/common": "^10.1.4",
+    "@angular/core": "^10.1.4",
+    "@angular/forms": "^10.1.4",
+    "@angular/platform-browser": "^10.1.4",
+    "@angular/platform-browser-dynamic": "^10.1.4",
+    "@angular/router": "^10.1.4",
+    "@dagonmetric/ng-log": "^2.3.2",
+    "@dagonmetric/ng-translit": "^14.3.1",
+    "@ionic-native/app-rate": "^5.28.0",
+    "@ionic-native/core": "^5.28.0",
+    "@ionic-native/firebase-dynamic-links": "^5.28.0",
+    "@ionic-native/firebase-x": "^5.28.0",
+    "@ionic-native/header-color": "^5.28.0",
+    "@ionic-native/native-storage": "^5.28.0",
+    "@ionic-native/social-sharing": "^5.28.0",
+    "@ionic-native/splash-screen": "^5.28.0",
+    "@ionic-native/status-bar": "^5.28.0",
+    "@ionic-native/web-intent": "^5.28.0",
+    "@ionic/angular": "^5.3.4",
+    "@myanmartools/ng-zawgyi-detector": "^1.2.5",
+    "@myanmartools/zawgyi-unicode-translit-rules": "^1.1.5",
+    "cordova-android": "^9.0.0",
+    "core-js": "^3.6.5",
+    "rxjs": "^6.6.3",
+    "tslib": "^2.0.1",
+    "zone.js": "^0.11.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.901.0",
-    "@angular-devkit/build-angular": "0.901.0",
-    "@angular-devkit/core": "^9.1.0",
-    "@angular-devkit/schematics": "^9.1.0",
-    "@angular/cli": "^9.1.0",
-    "@angular/compiler-cli": "^9.1.0",
-    "@angular/language-service": "^9.1.0",
-    "@ionic/angular-toolkit": "^2.2.0",
-    "@types/jasmine": "^3.5.10",
+    "@angular-devkit/build-angular": "0.1001.4",
+    "@angular/cli": "^10.1.4",
+    "@angular/compiler": "^10.1.4",
+    "@angular/compiler-cli": "^10.1.4",
+    "@angular/language-service": "^10.1.4",
+    "@ionic/angular-toolkit": "^2.3.3",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^13.11.0",
+    "@types/node": "^14.11.2",
+    "com-darryncampbell-cordova-plugin-intent": "^2.0.0",
+    "cordova-plugin-apprate": "1.5.0",
     "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-dialogs": "^2.0.2",
+    "cordova-plugin-firebase-analytics": "^4.5.0",
+    "cordova-plugin-firebase-dynamiclinks": "^4.6.0",
+    "cordova-plugin-firebasex": "^11.0.2",
+    "cordova-plugin-headercolor": "^1.0.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.1.3",
-    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-ionic-webview": "^5.0.0",
+    "cordova-plugin-nativestorage": "^2.3.2",
+    "cordova-plugin-splashscreen": "^6.0.0",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "^5.0.1",
-    "karma": "^4.4.1",
+    "cordova-plugin-x-socialsharing": "^6.0.2",
+    "cordova-support-android-plugin": "^1.0.2",
+    "cordova-support-google-services": "^1.4.1",
+    "es6-promise-plugin": "^4.2.2",
+    "jasmine-core": "^3.6.0",
+    "jasmine-spec-reporter": "^6.0.0",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "karma-junit-reporter": "^2.0.1",
-    "protractor": "^5.4.3",
-    "ts-node": "^8.8.2",
-    "typescript": "~3.8.3"
+    "protractor": "^7.0.0",
+    "ts-node": "^9.0.0",
+    "typescript": "~4.0.3"
   },
   "cordova": {
     "plugins": {
@@ -107,9 +99,7 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-headercolor": {},
       "cordova-plugin-apprate": {},
-      "cordova-plugin-x-socialsharing": {
-        "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
-      },
+      "cordova-plugin-x-socialsharing": {},
       "com-darryncampbell-cordova-plugin-intent": {},
       "cordova-plugin-firebasex": {
         "FIREBASE_ANALYTICS_COLLECTION_ENABLED": "true",
@@ -117,23 +107,24 @@
         "FIREBASE_CRASHLYTICS_COLLECTION_ENABLED": "true",
         "ANDROID_ICON_ACCENT": "#FF00FFFF",
         "ANDROID_PLAY_SERVICES_TAGMANAGER_VERSION": "17.0.0",
-        "ANDROID_FIREBASE_MESSAGING_VERSION": "20.1.4",
-        "ANDROID_FIREBASE_CONFIG_VERSION": "19.1.3",
-        "ANDROID_FIREBASE_PERF_VERSION": "19.0.5",
-        "ANDROID_FIREBASE_AUTH_VERSION": "19.2.0",
+        "ANDROID_FIREBASE_MESSAGING_VERSION": "20.3.0",
+        "ANDROID_FIREBASE_CONFIG_VERSION": "19.2.0",
+        "ANDROID_FIREBASE_PERF_VERSION": "19.0.9",
+        "ANDROID_FIREBASE_AUTH_VERSION": "19.4.0",
         "ANDROID_CRASHLYTICS_VERSION": "2.10.1",
         "ANDROID_CRASHLYTICS_NDK_VERSION": "2.1.1",
-        "ANDROID_FIREBASE_ANALYTICS_VERSION": "17.3.0",
-        "ANDROID_PLAY_SERVICES_AUTH_VERSION": "17.0.0",
-        "ANDROID_FIREBASE_INAPPMESSAGING_VERSION": "19.0.3",
-        "ANDROID_FIREBASE_FIRESTORE_VERSION": "21.4.0",
-        "ANDROID_GSON_VERSION": "2.8.6"
+        "ANDROID_FIREBASE_ANALYTICS_VERSION": "17.5.0",
+        "ANDROID_PLAY_SERVICES_AUTH_VERSION": "18.1.0",
+        "ANDROID_FIREBASE_INAPPMESSAGING_VERSION": "19.1.1",
+        "ANDROID_FIREBASE_FIRESTORE_VERSION": "21.7.0",
+        "ANDROID_FIREBASE_CRASHLYTICS_VERSION": "17.2.2",
+        "ANDROID_FIREBASE_CRASHLYTICS_NDK_VERSION": "17.2.2",
+        "ANDROID_GSON_VERSION": "2.8.6",
+        "ANDROID_FIREBASE_PERF_GRADLE_PLUGIN_VERSION": "1.3.1"
       },
       "cordova-plugin-firebase-dynamiclinks": {
-        "APP_DOMAIN": "zawgyi-unicode-converter.myanmartools.org",
         "PAGE_LINK_DOMAIN": "myanmartools.org/apps",
-        "FIREBASE_ANALYTICS_VERSION": "17.3.+",
-        "FIREBASE_DYNAMIC_LINKS_VERSION": "19.1.+"
+        "ANDROID_FIREBASE_DYNAMICLINKS_VERSION": "19.1.+"
       }
     },
     "platforms": [
