--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "lint": "eslint -c .eslintrc.json --ext .js,.ts ."
   },
   "dependencies": {
     "@angular/common": "^10.1.4",
@@ -57,6 +58,13 @@
     "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.11.2",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-jsdoc": "^30.6.3",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2",
     "com-darryncampbell-cordova-plugin-intent": "^2.0.0",
     "cordova-plugin-apprate": "1.5.0",
     "cordova-plugin-device": "^2.0.3",
