--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,12 +2,11 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "target": "es5",
-    "outDir": "./dist/out-tsc/app",
+    "outDir": "./out-tsc/app",
     "types": []
   },
   "files": [
-    "src/main.ts",
-    "src/zone-flags.ts",
+    "src/main.ts",    
     "src/polyfills.ts"
   ],
   "include": [
