--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "lint": "eslint -c .eslintrc.json --ext .js,.ts ."
   },
   "dependencies": {
+    "@angular/animations": "^10.1.4",
+    "@angular/cdk": "^10.2.3",
     "@angular/common": "^10.1.4",
     "@angular/core": "^10.1.4",
     "@angular/forms": "^10.1.4",
+    "@angular/material": "^10.2.3",
     "@angular/platform-browser": "^10.1.4",
     "@angular/platform-browser-dynamic": "^10.1.4",
     "@angular/router": "^10.1.4",
