Updat package dependencies

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test -c=ci",
     "e2e": "ng e2e",
     "lint": "eslint -c .eslintrc.json --ext .js,.ts ."
   },
@@ -60,8 +60,8 @@
     "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.11.2",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
     "com-darryncampbell-cordova-plugin-intent": "^2.0.0",
     "cordova-plugin-apprate": "1.4.0",
     "cordova-plugin-device": "^2.0.3",
@@ -92,7 +92,6 @@
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "karma-junit-reporter": "^2.0.1",
     "prettier": "^2.1.2",
     "protractor": "^7.0.0",
     "ts-node": "^9.0.0",
