--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,15 +8,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Use Node.js 12.x
       uses: actions/setup-node@v1
       with:
         node-version: 12.x
-    - name: npm install, build and lint
+    - name: npm install, build, test and lint
       run: |
         npm ci
-        npm run build --if-present
+        npm run build --if-present        
+        npm run test --if-present
         npm run lint --if-present
       env:
         CI: true
