--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,6 +2,9 @@ name: Main Workflow
 
 on: [push]
 
+env:  
+  NODE_VERSION: '12.x'
+
 jobs:
   build:
 
@@ -9,15 +12,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js 12.x
+    - name: Use Node.js ${{ env.NODE_VERSION }}
       uses: actions/setup-node@v1
       with:
-        node-version: 12.x
-    - name: npm install, build, test and lint
+        node-version: ${{ env.NODE_VERSION }}
+    - name: npm install, lint, build and test
       run: |
         npm ci
-        npm run build --if-present
-        npm run test --if-present
-        npm run lint --if-present
+        npm run lint
+        npm run build
+        npm run test        
       env:
         CI: true
