--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zawgyi-unicode-converter-native",
-  "version": "3.7.0",
+  "version": "4.0.0",
   "private": true,
   "author": "DagonMetric",
   "license": "MIT",
@@ -22,17 +22,18 @@
   },
   "dependencies": {
     "@angular/animations": "^10.1.4",
-    "@angular/cdk": "^10.2.3",
+    "@angular/cdk": "^10.2.4",
     "@angular/common": "^10.1.4",
     "@angular/core": "^10.1.4",
     "@angular/forms": "^10.1.4",
-    "@angular/material": "^10.2.3",
+    "@angular/material": "^10.2.4",
     "@angular/platform-browser": "^10.1.4",
     "@angular/platform-browser-dynamic": "^10.1.4",
     "@angular/router": "^10.1.4",
     "@dagonmetric/ng-log": "^2.3.2",
     "@dagonmetric/ng-translit": "^14.3.1",
     "@ionic-native/app-rate": "^5.28.0",
+    "@ionic-native/clipboard": "^5.28.0",
     "@ionic-native/core": "^5.28.0",
     "@ionic-native/firebase-x": "^5.28.0",
     "@ionic-native/header-color": "^5.28.0",
@@ -47,7 +48,7 @@
     "cordova-android": "^9.0.0",
     "core-js": "^3.6.5",
     "rxjs": "^6.6.3",
-    "tslib": "^2.0.1",
+    "tslib": "^2.0.2",
     "zone.js": "^0.11.1"
   },
   "devDependencies": {
@@ -59,10 +60,11 @@
     "@ionic/angular-toolkit": "^2.3.3",
     "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.11.2",
+    "@types/node": "^14.11.5",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
     "com-darryncampbell-cordova-plugin-intent": "^2.0.0",
+    "cordova-clipboard": "^1.3.0",
     "cordova-plugin-apprate": "1.4.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-dialogs": "^2.0.2",
@@ -115,7 +117,7 @@
         "FIREBASE_ANALYTICS_COLLECTION_ENABLED": "true",
         "FIREBASE_PERFORMANCE_COLLECTION_ENABLED": "true",
         "FIREBASE_CRASHLYTICS_COLLECTION_ENABLED": "true",
-        "ANDROID_ICON_ACCENT": "#FF00FFFF",
+        "ANDROID_ICON_ACCENT": "#FF8764B8",
         "ANDROID_PLAY_SERVICES_TAGMANAGER_VERSION": "17.0.0",
         "ANDROID_FIREBASE_MESSAGING_VERSION": "20.3.0",
         "ANDROID_FIREBASE_CONFIG_VERSION": "19.2.0",
@@ -131,7 +133,8 @@
         "ANDROID_FIREBASE_CRASHLYTICS_NDK_VERSION": "17.2.2",
         "ANDROID_GSON_VERSION": "2.8.6",
         "ANDROID_FIREBASE_PERF_GRADLE_PLUGIN_VERSION": "1.3.1"
-      }
+      },
+      "cordova-clipboard": {}
     },
     "platforms": [
       "android"
