--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@ionic-native/splash-screen": "^5.28.0",
     "@ionic-native/status-bar": "^5.28.0",
     "@ionic-native/web-intent": "^5.28.0",
-    "@ionic/angular": "^5.3.4",
+    "@ionic/angular": "^5.3.5",
     "@myanmartools/ng-zawgyi-detector": "^1.2.5",
     "@myanmartools/zawgyi-unicode-translit-rules": "^1.1.5",
     "cordova-android": "^9.0.0",
@@ -52,8 +52,8 @@
     "zone.js": "^0.11.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1001.4",
-    "@angular/cli": "^10.1.4",
+    "@angular-devkit/build-angular": "0.1001.5",
+    "@angular/cli": "^10.1.5",
     "@angular/compiler": "^10.1.5",
     "@angular/compiler-cli": "^10.1.5",
     "@angular/language-service": "^10.1.5",
@@ -115,7 +115,7 @@
       "com-darryncampbell-cordova-plugin-intent": {},
       "cordova-plugin-firebasex": {
         "FIREBASE_ANALYTICS_COLLECTION_ENABLED": "true",
-        "FIREBASE_PERFORMANCE_COLLECTION_ENABLED": "true",
+        "FIREBASE_PERFORMANCE_COLLECTION_ENABLED": "false",
         "FIREBASE_CRASHLYTICS_COLLECTION_ENABLED": "true",
         "ANDROID_ICON_ACCENT": "#FF8764B8",
         "ANDROID_PLAY_SERVICES_TAGMANAGER_VERSION": "17.0.0",
