Update package dependencies

--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-firebase-analytics": "^4.5.0",
-    "cordova-plugin-firebasex": "^11.0.2",
+    "cordova-plugin-firebasex": "^11.0.3",
     "cordova-plugin-globalization": "^1.11.0",
     "cordova-plugin-headercolor": "^1.0.0",
     "cordova-plugin-inappbrowser": "^4.0.0",
@@ -115,18 +115,17 @@
       "com-darryncampbell-cordova-plugin-intent": {},
       "cordova-plugin-firebasex": {
         "FIREBASE_ANALYTICS_COLLECTION_ENABLED": "true",
-        "FIREBASE_PERFORMANCE_COLLECTION_ENABLED": "false",
+        "FIREBASE_PERFORMANCE_COLLECTION_ENABLED": "true",
         "FIREBASE_CRASHLYTICS_COLLECTION_ENABLED": "true",
         "ANDROID_ICON_ACCENT": "#FF8764B8",
+        "ANDROID_FIREBASE_PERFORMANCE_MONITORING": "false",
         "ANDROID_PLAY_SERVICES_TAGMANAGER_VERSION": "17.0.0",
+        "ANDROID_PLAY_SERVICES_AUTH_VERSION": "18.1.0",
+        "ANDROID_FIREBASE_ANALYTICS_VERSION": "17.5.0",
         "ANDROID_FIREBASE_MESSAGING_VERSION": "20.3.0",
         "ANDROID_FIREBASE_CONFIG_VERSION": "19.2.0",
         "ANDROID_FIREBASE_PERF_VERSION": "19.0.9",
         "ANDROID_FIREBASE_AUTH_VERSION": "19.4.0",
-        "ANDROID_CRASHLYTICS_VERSION": "2.10.1",
-        "ANDROID_CRASHLYTICS_NDK_VERSION": "2.1.1",
-        "ANDROID_FIREBASE_ANALYTICS_VERSION": "17.5.0",
-        "ANDROID_PLAY_SERVICES_AUTH_VERSION": "18.1.0",
         "ANDROID_FIREBASE_INAPPMESSAGING_VERSION": "19.1.1",
         "ANDROID_FIREBASE_FIRESTORE_VERSION": "21.7.0",
         "ANDROID_FIREBASE_CRASHLYTICS_VERSION": "17.2.2",
