--- a/package.json
+++ b/package.json
@@ -21,51 +21,51 @@
     "lint": "eslint -c .eslintrc.json --ext .js,.ts ."
   },
   "dependencies": {
-    "@angular/animations": "^10.1.5",
-    "@angular/cdk": "^10.2.4",
-    "@angular/common": "^10.1.5",
-    "@angular/core": "^10.1.5",
-    "@angular/forms": "^10.1.5",
-    "@angular/material": "^10.2.4",
-    "@angular/platform-browser": "^10.1.5",
-    "@angular/platform-browser-dynamic": "^10.1.5",
-    "@angular/router": "^10.1.5",
+    "@angular/animations": "^10.1.6",
+    "@angular/cdk": "^10.2.5",
+    "@angular/common": "^10.1.6",
+    "@angular/core": "^10.1.6",
+    "@angular/forms": "^10.1.6",
+    "@angular/material": "^10.2.5",
+    "@angular/platform-browser": "^10.1.6",
+    "@angular/platform-browser-dynamic": "^10.1.6",
+    "@angular/router": "^10.1.6",
     "@dagonmetric/ng-log": "^2.3.2",
     "@dagonmetric/ng-translit": "^14.3.1",
-    "@ionic-native/app-rate": "^5.28.0",
-    "@ionic-native/clipboard": "^5.28.0",
-    "@ionic-native/core": "^5.28.0",
-    "@ionic-native/firebase-x": "^5.28.0",
-    "@ionic-native/header-color": "^5.28.0",
-    "@ionic-native/native-storage": "^5.28.0",
-    "@ionic-native/social-sharing": "^5.28.0",
-    "@ionic-native/splash-screen": "^5.28.0",
-    "@ionic-native/status-bar": "^5.28.0",
-    "@ionic-native/web-intent": "^5.28.0",
-    "@ionic/angular": "^5.3.5",
+    "@ionic-native/app-rate": "^5.29.0",
+    "@ionic-native/clipboard": "^5.29.0",
+    "@ionic-native/core": "^5.29.0",
+    "@ionic-native/firebase-x": "^5.29.0",
+    "@ionic-native/header-color": "^5.29.0",
+    "@ionic-native/native-storage": "^5.29.0",
+    "@ionic-native/social-sharing": "^5.29.0",
+    "@ionic-native/splash-screen": "^5.29.0",
+    "@ionic-native/status-bar": "^5.29.0",
+    "@ionic-native/web-intent": "^5.29.0",
+    "@ionic/angular": "^5.4.0",
     "@myanmartools/ng-zawgyi-detector": "^1.2.5",
     "@myanmartools/zawgyi-unicode-translit-rules": "^1.1.5",
     "cordova-android": "^9.0.0",
     "core-js": "^3.6.5",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.3",
-    "zone.js": "^0.11.1"
+    "zone.js": "^0.11.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1001.6",
-    "@angular/cli": "^10.1.6",
-    "@angular/compiler": "^10.1.5",
-    "@angular/compiler-cli": "^10.1.5",
-    "@angular/language-service": "^10.1.5",
+    "@angular-devkit/build-angular": "0.1001.7",
+    "@angular/cli": "^10.1.7",
+    "@angular/compiler": "^10.1.6",
+    "@angular/compiler-cli": "^10.1.6",
+    "@angular/language-service": "^10.1.6",
     "@ionic/angular-toolkit": "^2.3.3",
     "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.11.8",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
+    "@types/node": "^14.11.10",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
     "com-darryncampbell-cordova-plugin-intent": "^2.0.0",
     "cordova-clipboard": "^1.3.0",
-    "cordova-plugin-apprate": "1.4.0",
+    "cordova-plugin-apprate": "1.6.1",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-firebase-analytics": "^4.5.0",
@@ -84,8 +84,8 @@
     "cordova-support-google-services": "^1.4.1",
     "es6-promise-plugin": "^4.2.2",
     "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-jsdoc": "^30.6.4",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-plugin-jsdoc": "^30.6.5",
     "eslint-plugin-prettier": "^3.1.4",
     "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "^6.0.0",
@@ -110,7 +110,9 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-headercolor": {},
-      "cordova-plugin-apprate": {},
+      "cordova-plugin-apprate": {
+        "PLAY_CORE_VERSION": "1.+"
+      },
       "cordova-plugin-x-socialsharing": {},
       "com-darryncampbell-cordova-plugin-intent": {},
       "cordova-plugin-firebasex": {
@@ -121,17 +123,17 @@
         "ANDROID_FIREBASE_PERFORMANCE_MONITORING": "false",
         "ANDROID_PLAY_SERVICES_TAGMANAGER_VERSION": "17.0.0",
         "ANDROID_PLAY_SERVICES_AUTH_VERSION": "18.1.0",
-        "ANDROID_FIREBASE_ANALYTICS_VERSION": "17.5.0",
+        "ANDROID_FIREBASE_ANALYTICS_VERSION": "17.6.0",
         "ANDROID_FIREBASE_MESSAGING_VERSION": "20.3.0",
         "ANDROID_FIREBASE_CONFIG_VERSION": "19.2.0",
         "ANDROID_FIREBASE_PERF_VERSION": "19.0.9",
         "ANDROID_FIREBASE_AUTH_VERSION": "19.4.0",
         "ANDROID_FIREBASE_INAPPMESSAGING_VERSION": "19.1.1",
-        "ANDROID_FIREBASE_FIRESTORE_VERSION": "21.7.0",
+        "ANDROID_FIREBASE_FIRESTORE_VERSION": "21.7.1",
         "ANDROID_FIREBASE_CRASHLYTICS_VERSION": "17.2.2",
         "ANDROID_FIREBASE_CRASHLYTICS_NDK_VERSION": "17.2.2",
         "ANDROID_GSON_VERSION": "2.8.6",
-        "ANDROID_FIREBASE_PERF_GRADLE_PLUGIN_VERSION": "1.3.1"
+        "ANDROID_FIREBASE_PERF_GRADLE_PLUGIN_VERSION": "1.3.2"
       },
       "cordova-clipboard": {}
     },
